# jvmcpp

./: CMakeLists.txt  README.md  cmd.cpp  cmd.h  interpreter.cpp  interpreter.h  jvm.cpp  jvm.h  jvmcpp.cpp
classfile/: attributes.cpp  attributes.h  classfile.cpp  classfile.h  classreader.cpp  classreader.h  constantpool.cpp  constantpool.h  memberInfo.cpp  memberInfo.h
classpath/: classpath.cpp  classpath.h  entry.cpp  entry.h
instructions/base/: base_logic.cpp  base_logic.h  bytecode_reader.cpp  bytecode_reader.h  instruction.cpp  instruction.h
instructions/comparisons/: cmp.cpp  cmp.h  if.cpp  if.h  if_cmp.cpp  if_cmp.h
instructions/constants/: const.cpp  const.h  ipush.cpp  ipush.h  nop.cpp  nop.h
instructions/control/: goto.cpp  goto.h  return.cpp  return.h  switch.cpp  switch.h
instructions/conversions/: x2x.cpp  x2x.h
instructions/extended/: goto_w.cpp  goto_w.h  ifnull.cpp  ifnull.h  wide.cpp  wide.h
instructions/loads/: load.cpp  load.h  xaload.cpp  xaload.h
instructions/math/: and.cpp  and.h  iinc.cpp  iinc.h  rem.cpp  rem.h  sh.cpp  sh.h
instructions/references/: athrow.cpp  athrow.h  field.cpp  field.h  instanceof.cpp  instanceof.h  invokeinterface.cpp  invokeinterface.h  invokespecial.cpp  invokespecial.h  invokestatic.cpp  invokestatic.h  invokevirtual.cpp  invokevirtual.h  ldc.cpp  ldc.h  multianewarray.cpp  multianewarray.h  new.cpp  new.h  newarray.cpp  newarray.h  static.cpp  static.h
instructions/reserved/: invokenative.cpp  invokenative.h
instructions/stack/: dup.cpp  dup.h  pop.cpp  pop.h  swap.cpp  swap.h
instructions/stores/: store.cpp  store.h  xastore.cpp  xastore.h
lib/: cmdline.h  miniz.h  zip.cpp  zip.h
native/: registry.cpp  registry.h
native/java/lang/: Class0.cpp  Class0.h  Double0.cpp  Double0.h  Float0.cpp  Float0.h  Object0.cpp  Object0.h  String0.cpp  String0.h  System0.cpp  System0.h  Throwable0.cpp  Throwable0.h
native/sun/misc/: VM.cpp  VM.h
rtda/: frame.cpp  frame.h  thread.cpp  thread.h
rtda/heap/: access_flags.h  class.cpp  class.h  class_loader.cpp  class_loader.h  class_member.cpp  class_member.h  method_descriptor.cpp  method_descriptor.h  object.cpp  object.h  runtimeconstantpool.cpp  runtimeconstantpool.h  slots.cpp  slots.h  string_pool.cpp  string_pool.h
